--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ p, li, span, label, input, textarea {
 }
 
 a {
+    font-family: 'Roboto Mono', monospace;
     text-decoration: none;
     color: #17a2b8;
 }
@@ -249,6 +250,43 @@ h6 { font-size: 16px;}
 #corner-br {
     bottom: -5px;
     right: -5px;
+}
+
+.about-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding-top: 50px;
+    padding-bottom: 50px;
+    gap: 100px;
+}
+
+#skills {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--previewShadow);
+}
+
+.social-links {
+    display: grid;
+    align-content: center;
+    text-align: center;
+}
+#social_img {
+    width: 100%;
+}
+
+.post-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 320px);
+    gap: 20px;
+    justify-content: center;
+}
+
+.thumbnail {
+    display: block;
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1200px) {
